--- a/ProyectoPDS/pom.xml
+++ b/ProyectoPDS/pom.xml
@@ -31,6 +31,23 @@
       <version>5.7.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+  	  <groupId>org.assertj</groupId>
+  	  <artifactId>assertj-core</artifactId>
+  	  <version>3.27.2</version>
+ 	  <scope>test</scope>
+	</dependency>
+	<dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>6.4.4.Final</version> 
+    </dependency>
+    <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>2.2.224</version>
+        <scope>runtime</scope>
+    </dependency>
   </dependencies>
 
   <build>
